--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,13 +1,23 @@
-name: Cypress Test
-on: [push]
+name: Run Cypress Test
+
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v5.0.0
 
-      - name: Cypress.io
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run specific Cypress test
         uses: cypress-io/github-action@v6.5.0
         with:
-          start: npm cypress open
+          start: npx cypress run --spec "mi-proyecto-cypress\1-getting-started\PRUEBAS\login.cy.js"
+          record: false
