--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Cypress Test
+name: Cypress Tests
 
 on: [push, pull_request]
 
@@ -10,17 +10,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Use Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
+      - name: Show directory tree (debug)
+        run: |
+          pwd
+          ls -R
 
       - name: Install dependencies
         run: npm ci
-        working-directory: ./cypress/mi-proyecto-cypress
+        working-directory: cypress/mi-proyecto-cypress
 
       - name: Run Cypress tests
         uses: cypress-io/github-action@v6.5.0
         with:
-          working-directory: ./cypress/mi-proyecto-cypress
+          working-directory: cypress/mi-proyecto-cypress
           command: npx cypress run --spec "cypress/e2e/login.cy.js"
