--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,17 +10,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Show directory tree (debug)
+      - name: Show structure (debug)
         run: |
           pwd
           ls -R
 
       - name: Install dependencies
         run: npm ci
-        working-directory: cypress/mi-proyecto-cypress
+        working-directory: mi-proyecto-cypress
 
       - name: Run Cypress tests
         uses: cypress-io/github-action@v6.5.0
         with:
-          working-directory: cypress/mi-proyecto-cypress
+          working-directory: mi-proyecto-cypress
           command: npx cypress run --spec "cypress/e2e/login.cy.js"
