--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,24 +1,37 @@
 name: Cypress Tests
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [ main ]
+  pull_request:
 
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      # 1️⃣ Clonar el repositorio
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Show structure (debug)
+      # 2️⃣ Instalar Node.js
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      # 3️⃣ Mostrar estructura (opcional, para depuración)
+      - name: Show folder structure
         run: |
           pwd
           ls -R
 
+      # 4️⃣ Instalar dependencias en la subcarpeta
       - name: Install dependencies
         run: npm ci
         working-directory: mi-proyecto-cypress
 
+      # 5️⃣ Ejecutar Cypress
       - name: Run Cypress tests
         uses: cypress-io/github-action@v6.5.0
         with:
