--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Cypress Tests
+name: Cypress Single Test
 
 on:
   push:
@@ -14,26 +14,33 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2️⃣ Instalar Node.js
+      # 2️⃣ Configurar Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
 
-      # 3️⃣ Mostrar estructura (opcional, para depuración)
-      - name: Show folder structure
-        run: |
-          pwd
-          ls -R
+      # 3️⃣ Caché de node_modules
+      - name: Cache node modules
+        uses: actions/cache@v3
+        with:
+          path: mi-proyecto-cypress/node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('mi-proyecto-cypress/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
 
-      # 4️⃣ Instalar dependencias en la subcarpeta
+      # 4️⃣ Instalar dependencias
       - name: Install dependencies
         run: npm ci
         working-directory: mi-proyecto-cypress
 
-      # 5️⃣ Ejecutar Cypress
-      - name: Run Cypress tests
+      # 5️⃣ Depuración: listar todos los tests
+      - name: List e2e test files
+        run: ls -R mi-proyecto-cypress/e2e/1-getting-started/PRUEBAS
+
+      # 6️⃣ Ejecutar solo el test específico
+      - name: Run single Cypress test
         uses: cypress-io/github-action@v6.5.0
         with:
           working-directory: mi-proyecto-cypress
-          command: npx cypress run --spec "e2e/1-getting-started/PRUEBAS/login.cy.js"
+          command: npx cypress run --spec e2e/1-getting-started/PRUEBAS/login.cy.js
