--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Cypress Single Test Debug
+name: Cypress Single Test
 
 on:
   push:
@@ -6,38 +6,23 @@ on:
   pull_request:
 
 jobs:
-  cypress-debug:
+  cypress-run:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Clonar el repositorio
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      # 2️⃣ Configurar Node.js
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 20
 
-      # 3️⃣ Depuración: listar la raíz del repo
-      - name: List repo root
-        run: ls -lR
-
-      # 4️⃣ Depuración: listar carpeta mi-proyecto-cypress
-      - name: List mi-proyecto-cypress
-        run: ls -lR mi-proyecto-cypress
-
-      # 5️⃣ Depuración: listar la carpeta e2e
-      - name: List e2e test files
-        run: ls -lR mi-proyecto-cypress/e2e
-
-      # 6️⃣ Instalar dependencias
       - name: Install dependencies
         run: npm ci
         working-directory: mi-proyecto-cypress
 
-      # 7️⃣ Ejecutar Cypress test (solo después de depuración)
+      - name: Verify test file exists
+        run: ls -lR mi-proyecto-cypress/e2e/1-getting-started/PRUEBAS
+
       - name: Run single Cypress test
         uses: cypress-io/github-action@v6.5.0
         with:
