--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Cypress Single Test
+name: Cypress Single Test on Windows
 
 on:
   push:
@@ -7,24 +7,45 @@ on:
 
 jobs:
   cypress-run:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
-      - uses: actions/checkout@v4
+      # 1️⃣ Clonar el repositorio
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - uses: actions/setup-node@v4
+      # 2️⃣ Configurar Node.js
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
           node-version: 20
 
+      # 3️⃣ Instalar dependencias
       - name: Install dependencies
         run: npm ci
         working-directory: mi-proyecto-cypress
+        shell: powershell
 
-      - name: Verify test file exists
-        run: ls -lR mi-proyecto-cypress/e2e/1-getting-started/PRUEBAS
+      # 4️⃣ Depuración: listar los tests
+      - name: List e2e test files
+        run: dir mi-proyecto-cypress\e2e\1-getting-started\PRUEBAS
+        shell: powershell
 
-      - name: Run single Cypress test
-        uses: cypress-io/github-action@v6.5.0
+      # 5️⃣ Ejecutar solo el test específico
+      - name: Run Cypress test
+        run: npx cypress run --spec e2e/1-getting-started/PRUEBAS/login.cy.js
+        working-directory: mi-proyecto-cypress
+        shell: powershell
+
+      # 6️⃣ Subir screenshots y videos como artifacts
+      - name: Upload Cypress screenshots
+        uses: actions/upload-artifact@v3
         with:
-          working-directory: mi-proyecto-cypress
-          command: npx cypress run --spec e2e/1-getting-started/PRUEBAS/login.cy.js
+          name: cypress-screenshots
+          path: mi-proyecto-cypress\cypress\screenshots
+
+      - name: Upload Cypress videos
+        uses: actions/upload-artifact@v3
+        with:
+          name: cypress-videos
+          path: mi-proyecto-cypress\cypress\videos
