--- a/.github/workflows/test-login.yml
+++ b/.github/workflows/test-login.yml
@@ -1,4 +1,4 @@
-name: Cypress Single Test on Windows
+name: Test Cypress Login
 
 on:
   push:
@@ -26,13 +26,13 @@ jobs:
         working-directory: mi-proyecto-cypress
         shell: powershell
 
-      # 4️⃣ Listar archivos de prueba
-      - name: List e2e test files
+      # 4️⃣ Verificar archivos de prueba
+      - name: List all tests in PRUEBAS
         run: dir mi-proyecto-cypress\e2e\1-getting-started\PRUEBAS
         shell: powershell
 
-      # 5️⃣ Ejecutar el test único
-      - name: Run Cypress test
+      # 5️⃣ Ejecutar todos los tests en PRUEBAS
+      - name: Run all Cypress tests in PRUEBAS
         run: npx cypress run --spec e2e/1-getting-started/PRUEBAS/login.cy.js
         working-directory: mi-proyecto-cypress
         shell: powershell
@@ -46,6 +46,7 @@ jobs:
 
       # 7️⃣ Subir screenshots si existen
       - name: Upload Cypress screenshots
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: cypress-screenshots
@@ -53,6 +54,7 @@ jobs:
 
       # 8️⃣ Subir videos si existen
       - name: Upload Cypress videos
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: cypress-videos
