--- a/.github/workflows/test-pruebas.yml
+++ b/.github/workflows/test-pruebas.yml
@@ -1,9 +1,11 @@
 name: Test Cypress PRUEBAS
 
 on:
-  push:
-    branches: [ main ]
-  pull_request:
+  workflow_dispatch:
+    inputs:           # opcional, para parámetros
+      branch:
+        description: 'Branch to run workflow on'
+        default: 'main'
 
 jobs:
   cypress-run:
