--- a/mi-proyecto-cypress/Jenkinsfile
+++ b/mi-proyecto-cypress/Jenkinsfile
@@ -3,6 +3,9 @@ pipeline {
   tools {
     nodejs "NodeJS 25"
   }
+  parameters {
+    string(name: 'TEST_SPEC', defaultValue: 'e2e/1-getting-started/PRUEBAS/login.cy.js', description: 'Ruta del test o tests a ejecutar')
+  }
   stages {
     stage('Instalar dependencias') {
       steps {
@@ -14,15 +17,13 @@ pipeline {
         }
       }
     }
-    stage('Ejecutar pruebas específicas') {
+    stage('Ejecutar pruebas') {
       steps {
         dir('cypress/mi-proyecto-cypress') {
-          bat '''
-          REM Ejecutando pruebas específicas
-          npx cypress run --spec "e2e/1-getting-started/PRUEBAS/login.cy.js"
-          REM Para ejecutar múltiples tests:
-          REM npx cypress run --spec "e2e/login.cy.js,e2e/submit.cy.js,e2e/code200.cy.js"
-          '''
+          bat """
+          REM Ejecutando pruebas desde parámetro
+          npx cypress run --spec "${params.TEST_SPEC}"
+          """
         }
       }
     }
