--- a/mi-proyecto-cypress/Jenkinsfile
+++ b/mi-proyecto-cypress/Jenkinsfile
@@ -3,15 +3,18 @@ pipeline {
   tools {
     nodejs "NodeJS 25"
   }
+  parameters {
+    string(name: 'TEST_SPEC', defaultValue: 'e2e/login.cy.js', description: 'Ruta del test a ejecutar')
+  }
   stages {
-    stage('Probar npm install') {
+    stage('Probar Cypress') {
       steps {
-        timeout(time: 5, unit: 'MINUTES') {
+        timeout(time: 10, unit: 'MINUTES') {
           dir('mi-proyecto-cypress') {
             powershell """
-            Write-Host '=== Iniciando npm install ==='
-            npm install
-            Write-Host '=== npm install finalizado ==='
+            Write-Host '=== Ejecutando Cypress ==='
+            npx cypress run --spec '${params.TEST_SPEC}'
+            Write-Host '=== Cypress finalizado ==='
             """
           }
         }
