--- a/mi-proyecto-cypress/Jenkinsfile
+++ b/mi-proyecto-cypress/Jenkinsfile
@@ -38,7 +38,8 @@ pipeline {
         dir('mi-proyecto-cypress') {
           powershell """
           Write-Host '=== Generando reporte HTML ==='
-          npm run report
+          npx mochawesome-merge cypress/report/*.json > mochawesome.json
+          npx marge mochawesome.json --reportDir cypress/report --inline
           Write-Host '=== Reporte generado en cypress/report/index.html ==='
           """
         }
@@ -57,3 +58,4 @@ pipeline {
     }
   }
 }
+
