--- a/mi-proyecto-cypress/Jenkinsfile
+++ b/mi-proyecto-cypress/Jenkinsfile
@@ -38,7 +38,7 @@ pipeline {
         dir('mi-proyecto-cypress') {
           powershell """
           Write-Host '=== Generando reporte HTML ==='
-          npx mochawesome-merge cypress/report/*.json --reportFilename mochawesome.json
+          npx mochawesome-merge cypress/report/*.json | Out-File -Encoding UTF8 mochawesome.json
           npx marge mochawesome.json --reportDir cypress/report --inline
           Write-Host '=== Reporte generado en cypress/report/index.html ==='
           """
