--- a/mi-proyecto-cypress/Jenkinsfile
+++ b/mi-proyecto-cypress/Jenkinsfile
@@ -39,7 +39,7 @@ pipeline {
           powershell """
           Write-Host '=== Generando reporte HTML ==='
           $json = npx mochawesome-merge cypress/report/*.json
-          $json | Set-Content -Encoding utf8NoBOM mochawesome.json
+          [System.IO.File]::WriteAllText("mochawesome.json", $json, [System.Text.Encoding]::UTF8)
           npx marge mochawesome.json --reportDir cypress/report --inline
           Write-Host '=== Reporte generado en cypress/report/index.html ==='
           """
