--- a/.github/workflows/test-login.yml
+++ b/.github/workflows/test-login.yml
@@ -2,62 +2,51 @@ name: Test Cypress Login
 
 on:
   workflow_dispatch:
-    inputs:           # opcional, para parámetros
+    inputs:
       branch:
         description: 'Branch to run workflow on'
         default: 'main'
 
 jobs:
   cypress-run:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest   # ← CAMBIO IMPORTANTE
 
     steps:
-      # 1️⃣ Clonar el repositorio
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2️⃣ Configurar Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
 
-      # 3️⃣ Instalar dependencias
       - name: Install dependencies
         run: npm ci
         working-directory: mi-proyecto-cypress
-        shell: powershell
 
-      # 4️⃣ Verificar archivos de prueba
       - name: List all tests in PRUEBAS
-        run: dir mi-proyecto-cypress\e2e\1-getting-started\PRUEBAS
-        shell: powershell
+        run: ls mi-proyecto-cypress/e2e/1-getting-started/PRUEBAS
 
-      # 5️⃣ Ejecuta el test "login.cy.js"
-      - name: Run all Cypress tests in PRUEBAS
-        run: npx cypress run --spec e2e/1-getting-started/PRUEBAS/login.cy.js
+      - name: Run Cypress tests
+        run: npx cypress run --browser chrome --headless --spec e2e/1-getting-started/PRUEBAS/login.cy.js
         working-directory: mi-proyecto-cypress
-        shell: powershell
 
-      # 6️⃣ Subir reporte HTML de Mochawesome (siempre existe)
       - name: Upload Cypress HTML report
         uses: actions/upload-artifact@v4
         with:
           name: cypress-report
-          path: mi-proyecto-cypress\cypress\report\**\*
+          path: mi-proyecto-cypress/cypress/report/**
 
-      # 7️⃣ Subir screenshots si existen
       - name: Upload Cypress screenshots
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: cypress-screenshots
-          path: mi-proyecto-cypress\cypress\screenshots\**\*.png
+          path: mi-proyecto-cypress/cypress/screenshots/**/*.png
 
-      # 8️⃣ Subir videos si existen
       - name: Upload Cypress videos
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: cypress-videos
-          path: mi-proyecto-cypress\cypress\videos\**\*.mp4
+          path: mi-proyecto-cypress/cypress/videos/**/*.mp4
